Deploy to Railway (backend + MySQL) and Vercel (frontend)
Make DB connection, server port, and CORS origins configurable via env
vars so the backend runs on Railway; make the frontend API base URL
configurable via REACT_APP_API_URL for the Vercel build. Add live demo
links to both READMEs.